--- a/meeting-notes/2015-09-22.md
+++ b/meeting-notes/2015-09-22.md
@@ -1,3 +1,55 @@
 We can take live notes using this [etherpad on Riseup](https://pad.riseup.net/p/hh-ag-website-sept-22-15).
 
-After the call, we can move the notes here for posterity and transparency.
+September 22, 2015
+
+Attending (add your name here):
+	* Misha Vinokur @justfunny
+	* Phillip Smith @phillipadsmith
+	* Thomas Wilburn @thomaswilburn
+	* Michael Pereira @monkeycycle_org
+
+Next actions / decisions:
+	* Phillip to look up the cupcake model! It might make more sense than the Lean Startup model. 
+	* Phillip to add all to analytics & Wordpress:  same e-mails
+	* Phillip to ask Burt (cc Thomas): Could they be updated: One PSD, plus fonts, and so on
+	* All of us: Post one question that we'd like to ask members about the Website. [PS to stsrt GH thread]
+
+To be discussed / decided:    
+	* Agreement on our action group's scope of work
+		* Better defining the audience of this site
+		* Generating a plan for how to best meet that audiences needs
+		* Propose to board the above w/ our "cupcake" test as the start (simplify, etc.)
+		* Decision: The above is agreed by Misha, Thomas, and Phillip
+
+	* A small list of tasks that need to be undertaken to move this group's work forward
+		* Come up with three questions [that organizers could ask their members] --> Julia
+			* Each propose one guiding/insightful question that members could answer about the website...
+			* e.g., Did you even know what HH have a Website?
+		* Think about who "controls" the site / can make update / etc.
+		* And how big does it need to be? What does the audience really need? Could it be simple enough to run on Github pages?
+		* Questions:
+			* Old assets on the site (old logos, and so on)
+			* Could they be updated: One PSD, plus fonts, and so on.
+			* Even begs the question: What is the ideal "starter kit" for chapters? 
+
+
+Discussion:
+What is our mandate? Thomas asks.
+Phillip says, the Website does a poor job of promoting Hacks/Hackers at large.
+
+Misha asks: Who's it for? Members, or organizers? Who's the audience?
+    
+Thomas muses:
+* It seems like a placeholder
+* The menu of chapters doesn't do a great job: Big list, leads to empty chapter pages
+
+Also:
+	* What the purpose of the "jobs" section?
+	* Old chapter assets on the site. Would be great to get them updated
+	
+
+
+
+
+
+
